# movie-breakdown

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  testpypi.yml
docs/: 制片元素拆解方案.md  叙事结构拆解方案.md
docs/使用手册/: 01-安装配置与输入.md  02-叙事命令.md  03-制片命令.md  04-专家评审与人工修正.md  05-产物说明与故障排查.md  README.md
examples/: sample-screenplay.txt
src/movie_breakdown/: __init__.py  __main__.py  cli.py  cli_closure.py  cli_production.py  cli_production_closure.py  cli_quality.py  cli_render.py  cli_types.py  config.py
src/movie_breakdown/application/: __init__.py  artifact_loading.py  biography_context.py  biography_exporting.py  biography_quality.py  biography_quality_targets.py  biography_validation.py  character_dossiers.py  character_validation.py  closure.py  (+61 more)
tests/: factories.py  production_factories.py  test_adaptive_splitting.py  test_agno_analyzer.py  test_agno_production_analyzer.py  test_biography_context.py  test_biography_stages.py  test_biography_validation.py  test_character_biography.py  test_character_dossiers.py  test_cli.py  test_cli_closure.py  test_closure.py  test_correction_stages.py  test_correction_workflow.py  test_docstring_contracts.py  test_doctor.py  test_dossier_stages.py  test_dossier_validation.py  test_evidence.py  test_export_cache_integrity.py  test_exporting.py  test_file_constraints.py  test_fingerprint.py  test_live_deepseek.py  test_manual_corrections.py  test_package_metadata.py  test_parsers.py  test_pipeline.py  test_production_aggregation.py  test_production_cache_safety.py  test_production_cli.py  test_production_closure.py  test_production_closure_cli.py  test_production_closure_storage.py  test_production_corrections.py  test_production_diagnostics.py  test_production_models.py  test_production_pipeline.py  test_production_planning.py  (+21 more)
(+68 files in other folders)
