[project]
name = "movie-breakdown"
version = "1.0.0"
description = "面向中英文电影剧本的可恢复、可追溯叙事结构与制片元素拆解 CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Andy (ankunhou)", email = "houankun@hotmail.com" },
]
maintainers = [
    { name = "Andy (ankunhou)", email = "houankun@hotmail.com" },
]
keywords = [
    "screenplay",
    "narrative-analysis",
    "production-breakdown",
    "deepseek",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Typing :: Typed",
]
dependencies = [
    "agno>=2.0,<3",
    "openai>=1.99,<3",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.8,<3",
    "pypdf>=5,<7",
    "typer>=0.16,<1",
]

[project.scripts]
movie-breakdown = "movie_breakdown.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.12,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D202", "D415", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.pytest-tmp --cov=movie_breakdown --cov-report=term-missing"
testpaths = ["tests"]
markers = ["live: 需要真实 DeepSeek API 的在线契约测试"]

[tool.coverage.run]
branch = true
source = ["movie_breakdown"]
